--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 	</div>
 	-->
 
-	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+	<!-- Navigation section
+	================================================== -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<a class="navbar-brand" href="#">
 			<img src="images/logo.png" class = "img-fluid logo" alt="">
 		</a>
@@ -92,15 +94,23 @@
 		
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto my-2">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				<li class="nav-item active px-2">
+					<a class="nav-link" href="#">INICIO</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
+				<li class="nav-item px-2">
+					<a class="nav-link" href="#">NOSOTROS</a>
+				</li>				
+				<li class="nav-item px-2">
+					<a class="nav-link" href="#">SERVICIOS</a>
 				</li>
-				
-				<li class="nav-item">
-					<a class="nav-link disabled" href="#">Disabled</a>
+				<li class="nav-item px-2">
+					<a class="nav-link" href="#">CLIENTES</a>
+				</li>
+				<li class="nav-item px-2">
+					<a class="nav-link" href="#">INDICADORES</a>
+				</li>
+				<li class="nav-item px-2">
+					<a class="nav-link" href="#">CONTÁCTANOS</a>
 				</li>
 			</ul>			
 		</div>
@@ -113,11 +123,18 @@
 	<section class="after-nav-margin" id="home">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 p-0">	
-					<img src="images/home_nuevo.jpg" class="img-fluid align-image" alt="Identidad">		  	
-					
-					<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.4s">SERVICIOS</a>
-					<a href="contact.html#contact" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTANOS</a> 
+				<div class="col-lg-12 col-md-12 col-sm-12 p-0">										
+					<div class="button-container home-desk">
+						<img src="images/home_nuevo.jpg" class="img-fluid align-image" alt="Identidad">	  	
+						<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
+						<a href="contact.html#contact" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
+					</div>
+					<div class="home-mov">
+						<img src="images/home_nuevo.jpg" class="img-fluid align-image" alt="Identidad">	
+					</div>
+
+					<!-- <a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.4s">SERVICIOS</a>
+					<a href="contact.html#contact" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTANOS</a>  -->
 				</div>
 			</div>
 		</div>
@@ -127,12 +144,12 @@
 
 	<!-- Identity (Mision, Vision y valores) seccion
 	================================================== -->
-	<div id="nosotros"></div>
+	<div class="mt-5" id="nosotros"></div>
 
 	<!-- Section title -->
 	<div class = "container">
 		<div class="row title">
-			<div class="col-md-12 col-sm-12 wow bounceIn">
+			<div class="col-md-12 col-sm-12 wow bounceIn" data-wow-delay="0.4s">
 				<div class="">
 					<h2>Nosotros</h2>				
 				</div>
@@ -151,13 +168,13 @@
 
 		<section id = "identity">		
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
+				<div class="col-lg-4 col-md-4 col-sm-12 mt-3 wow fadeInUp " data-wow-delay="0.4s">
 					<img src="images/vision.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
-				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+				<div class="col-lg-4 col-md-4 col-sm-12 mt-3 wow fadeInUp" data-wow-delay="0.6s">
 					<img src="images/mision.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
-				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+				<div class="col-lg-4 col-md-4 col-sm-12 mt-3 wow fadeInUp" data-wow-delay="0.8s">
 					<img src="images/objetivo.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
 			</div>		
@@ -167,7 +184,7 @@
 
 		<!-- Values (Valores y equipo profesional) seccion
 		================================================== -->
-		<div id="equipo" class="no-space "></div>
+		<div id="equipo" class="mt-5"></div>
 
 		<!-- Section title -->
 		<div class="row title">
@@ -200,8 +217,12 @@
 	<!-- Pie de pagina (Footer)
 	==================================================  -->
 	<footer>
-		<div class="col-md-12 no-padding">
-			<img src="images/pie_texto.png" class="img-fluid">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12 p-0">
+					<img src="images/pie_texto.png" class="img-fluid">
+				</div>	
+			</div>	
 		</div>	
 	</footer>
 
